@@ -203,7 +203,10 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 计划中的项目
 
 #stats_publisher_text
-IATI 出版社
+出版社
+
+#stats_participating_text
+参与机构
 
 #stats_pipeline_text
 管道/识别
@@ -265,6 +268,9 @@ IATI<span>出版社</span>
 
 #stats_publisher_tip_text
 的组织报告这个数据总数
+
+#stats_participating_tip_text
+参与机构总数
 
 #stats_pipeline_tip_text
 正在确定范围或计划的活动总数
