@@ -206,7 +206,10 @@ Total Activities
 Planned Activities
 
 #stats_publisher_text
-IATI Reporting Organisations
+Reporting Organisations
+
+#stats_participating_text
+Participating Organisations
 
 #stats_pipeline_text
 Pipeline/identification
@@ -268,6 +271,9 @@ Total number of activities being planned in the future
 
 #stats_publisher_tip_text
 Total number of organisations that are reporting this data
+
+#stats_participating_tip_text
+Total number of participating organisations
 
 #stats_pipeline_tip_text
 Total number of activities being scoped or planned
