@@ -203,7 +203,10 @@ Nombre total de Projets
 Projets Prévus
 
 #stats_publisher_text
-IATI éditeurs
+Éditeurs
+
+#stats_participating_text
+Organisations participantes
 
 #stats_pipeline_text
 Pipeline/identification
@@ -265,6 +268,9 @@ Nombre total de projets en cours de planification dans l'avenir
 
 #stats_publisher_tip_text
 Nombre d'organisations qui rapporte ces données
+
+#stats_participating_tip_text
+Nombre total d'organisations participantes
 
 #stats_pipeline_tip_text
 Nombre total d'activités en cours d'évaluation ou planifiées
