@@ -203,7 +203,10 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 परियोजनाओं की योजना बनाई
 
 #stats_publisher_text
-IATI प्रकाशक
+प्रकाशक
+
+#stats_participating_text
+भाग लेने वाले संगठन
 
 #stats_pipeline_text
 पाइपलाइन/पहचान
@@ -265,6 +268,9 @@ IATI<span>प्रकाशक</span>
 
 #stats_publisher_tip_text
 इस डेटा रिपोर्टिंग कर रहे हैं कि संगठनों की कुल संख्या
+
+#stats_participating_tip_text
+भाग लेने वाले संगठनों की कुल संख्या
 
 #stats_pipeline_tip_text
 कुल गतिविधियों की संख्या जिन्हें दायरे में रखा गया है या जिनकी योजना बनाई गई है
