@@ -203,7 +203,10 @@ IMPORTANT! THIS IS A TEMPORARY DATA PREVIEW AND IS NOT A PERMANENT RECORD. YOUR 
 計画されたプロジェクト
 
 #stats_publisher_text
-IATIパブリッシャ
+パブリッシャ
+
+#stats_participating_text
+参加団体
 
 #stats_pipeline_text
 パイプライン/識別
@@ -265,6 +268,9 @@ IATI<span>パブリッシャ</span>
 
 #stats_publisher_tip_text
 このデータを報告している組織の総数
+
+#stats_participating_tip_text
+参加組織の総数
 
 #stats_pipeline_tip_text
 スコープ設定または計画中のアクティビティの総数
