@@ -203,7 +203,10 @@ Total de Proyectos
 Proyectos Planificados
 
 #stats_publisher_text
-IATI Editores
+Editores
+
+#stats_participating_text
+Organizaciones participantes
 
 #stats_pipeline_text
 Pipeline/identificación
@@ -265,6 +268,9 @@ Número total de proyectos que están siendo planificadas en el futuro
 
 #stats_publisher_tip_text
 Número total de organizaciones que están reportando estos datos
+
+#stats_participating_tip_text
+Número total de organizaciones participantes
 
 #stats_pipeline_tip_text
 Número total de actividades que se están definiendo o planificando
