@@ -1,3 +1,10 @@
+Development Portal (2025-11-13 shi)
+==============================
+Update activity status box to include participating org
+Update translations
+Update css
+
+
 Development Portal (2025-09-01 shi)
 ==============================
 Fix footer with Useful and Additional sections
